Optimizing symbpredabsCPA algorithm Needed to add isBottomElement() to AbstactDomain - this method should be implemented in automatonDomain
git-svn-id: https://svn.sosy-lab.org/software/cpachecker/trunk@353 4712c6d2-40bb-43ae-aa4b-fec3f1bdfe4c